--- a/html/learns/learn_project/nodemy/day_2/assets/main.css
+++ b/html/learns/learn_project/nodemy/day_2/assets/main.css
@@ -3,13 +3,13 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    transition: .25s;
 }
 
 :root {
     --border-img-color: #f2726a;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 body {
     background: linear-gradient(45deg, #00853e, #50c878);
@@ -24,6 +24,9 @@ body {
     height: 400px;
     background-color: #242628;
     text-align: center;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 30px;
 }
 
 .card__img {
@@ -33,6 +36,17 @@ body {
     border-radius: 50%;
     overflow: hidden;
     border: 4px solid var(--border-img-color);
+    margin: 0 auto;
+    margin-top: 24px;
+    cursor: pointer;
+}
+
+.card__img:hover {
+    width: 100%;
+    height: 100%;
+    border-radius: unset;
+    border: unset;
+    margin-top: unset;
 }
 
 .card__img img {
@@ -41,12 +55,43 @@ body {
     object-fit: cover;
 }
 
-.card__heading{
+.card__heading {
     text-transform: uppercase;
+    color: #fff;
+    margin-top: 16px;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.card__dsc {
+    text-transform: capitalize;
+    color: var(--border-img-color);
+}
+
+.card__socials-link {
+    margin: 25px 20px 40px;
+    display: inline-block;
+}
+
+.card__socials-icon {
     color: #fff;
 }
 
-.card__dsc{
-    text-transform: capitalize;
+.card__socials-icon:hover {
     color: var(--border-img-color);
+}
+
+.card__btn {
+    outline: none;
+    color: #fff;
+    padding: 10px 20px;
+    background-color: transparent;
+    border: 1px solid var(--border-img-color);
+    border-radius: inherit;
+    cursor: pointer;
+}
+
+
+.card__btn:hover {
+    background-color: var(--border-img-color);
 }
