--- a/html/learns/learn_project/nodemy/day_1/assets/css/base.css
+++ b/html/learns/learn_project/nodemy/day_1/assets/css/base.css
@@ -7,6 +7,10 @@
     color: var(--white-color);
 }
 
+.btn:hover{
+    transform: scale(0.9);
+}
+
 .btn.btn-primary{
     background-color: var(--primary-color);
 }
