--- a/html/learns/learn_project/nodemy/day_3/assets/css/main.css
+++ b/html/learns/learn_project/nodemy/day_3/assets/css/main.css
@@ -32,6 +32,9 @@ body {
     background-color: #fff;
     transition: .25s;
     font-size: 20px;
+    text-decoration: none;
+    color: #000;
+    user-select: none;
 }
 
 .open-modal-btn:hover {
@@ -44,12 +47,26 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgb( 0 0 0 / 0.6);
-    text-decoration: none;
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none;
+}
+
+#modal:target {
+    display: flex;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb( 0 0 0 / 0.6);
+    text-decoration: none;
+    z-index: 0;
 }
 
 .modal_container {
@@ -78,4 +95,19 @@ body {
 
 .modal__body-text {
     color: #000;
+}
+
+.modal__footer {
+    padding: 15px;
+    text-align: right;
+}
+
+.modal__footer-btn {
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    text-decoration: none;
+    border-radius: 6px;
+    color: #fff;
+    cursor: pointer;
+    user-select: none;
 }
