add day_3 times icon

--- a/html/learns/learn_project/nodemy/day_3/assets/css/main.css
+++ b/html/learns/learn_project/nodemy/day_3/assets/css/main.css
@@ -82,6 +82,12 @@ body {
     color: #fff;
     padding: 15px;
     font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal__header-exit {
+    color: #fff;
 }
 
 .modal__body {
