--- a/html/learns/learn_project/nodemy/day_3/assets/css/main.css
+++ b/html/learns/learn_project/nodemy/day_3/assets/css/main.css
@@ -52,6 +52,7 @@ body {
     justify-content: center;
     align-items: center;
     display: none;
+    transition: .25s;
 }
 
 #modal:target {
@@ -67,6 +68,7 @@ body {
     background-color: rgb( 0 0 0 / 0.6);
     text-decoration: none;
     z-index: 0;
+    animation: FadeIn ease .5s;
 }
 
 .modal_container {
@@ -75,6 +77,7 @@ body {
     background-color: #fff;
     border-radius: 5px;
     overflow: hidden;
+    animation: ShowModal linear .2s;
 }
 
 .modal__header {
@@ -116,4 +119,26 @@ body {
     color: #fff;
     cursor: pointer;
     user-select: none;
+}
+
+@keyframes ShowModal {
+    0% {
+        transform: translateY( -200px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes FadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
