--- a/html/projects/Nature/assets/css/main.css
+++ b/html/projects/Nature/assets/css/main.css
@@ -8,6 +8,13 @@
     height: 100%;
     flex: 1;
     transition: 0.5s;
+    will-change: flex, width, height;
+    position: relative;
+}
+
+
+.tour-nav__item:hover {
+    flex: 4;
 }
 
 .tour-nav__img {
@@ -17,9 +24,67 @@
     object-position: center;
 }
 
-.tour-nav__item:hover {
-    flex: 4;
+.tour {
+    width: 100vw;
+    overflow: hidden;
 }
 
-.tour-nav__item:hover .tour-nav__img {
+.tour__item {
+    width: 100vw;
+    height: 780px;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+}
+
+.tour__item:nth-child(1) {
+    background-image: url('https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+}
+
+.tour__item:nth-child(2) {
+    background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80');
+}
+
+.tour__item:nth-child(3) {
+    background-image: url('https://images.unsplash.com/photo-1475113548554-5a36f1f523d6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+}
+
+.tour__item:nth-child(4) {
+    background-image: url('https://images.unsplash.com/photo-1505144808419-1957a94ca61e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=626&q=80');
+}
+
+.tour__item:nth-child(5) {
+    background-image: url('https://images.unsplash.com/photo-1439853949127-fa647821eba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+}
+
+.tour__item:nth-child(6) {
+    background-image: url('https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+}
+
+.tour__item:nth-child(7) {
+    background-image: url('https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80');
+}
+
+.tour__item:nth-child(8) {
+    background-image: url('https://images.unsplash.com/photo-1508459855340-fb63ac591728?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+}
+
+.tour__info {
+    position: absolute;
+    bottom: 10%;
+    text-align: center;
+    filter: drop-shadow(0 0 1px #1abc9c);
+}
+
+.tour-heading {
+    color: #27ae60;
+    font-size: 32px;
+}
+
+.tour__dsc {
+    color: #2ecc71;
+    font-size: 24px;
 }
