--- a/html/projects/Nature/assets/css/main.css
+++ b/html/projects/Nature/assets/css/main.css
@@ -1,10 +1,10 @@
-.tour-nav {
+.nav {
     height: 100vh;
     width: 100vw;
     display: flex;   
 }
 
-.tour-nav__item {
+.nav__item {
     height: 100%;
     flex: 1;
     transition: 0.5s;
@@ -13,11 +13,11 @@
 }
 
 
-.tour-nav__item:hover {
+.nav__item:hover {
     flex: 4;
 }
 
-.tour-nav__img {
+.nav__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -87,4 +87,48 @@
 .tour__dsc {
     color: #2ecc71;
     font-size: 24px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fafafa;
+}
+
+.footer__text {
+    font-size: 24px;
+    font-weight: 600;
+    color: #333;
+    padding: 24px;
+}
+
+.footer__link {
+    text-decoration: none;
+    color: #27ae60;
+}
+
+.home-nav {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background-color: #111;
+    bottom: 5%;
+    right: 5%;
+    border-radius: 50%;
+}
+
+.home-nav__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    text-decoration: none;
+}
+
+.home-nav__btn {
+    width: 80%;
+    height: 80%;
 }
