--- a/html/learns/learn_project/W3school/the_band/assets/css/style.css
+++ b/html/learns/learn_project/W3school/the_band/assets/css/style.css
@@ -150,7 +150,7 @@ padding: 0px 24px;
 }
 
 #slider{
-background: url('/html/learns/w3schools_band_learn/assets/img/slider/slider1.jpg') top center no-repeat;
+background: url('./../img/slider/slider1.jpg') top center no-repeat;
 background-size: cover;
 margin-top: 46.5px;
 width: 100%;
