--- a/html/learns/learn_project/W3school/architects/assets/css/base.css
+++ b/html/learns/learn_project/W3school/architects/assets/css/base.css
@@ -6,6 +6,10 @@
     transition: 0.5s;
 }
 
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 :root {
     --theme-color: #fff;
     --second-theme-color: #000;
@@ -13,13 +17,11 @@
 
 .header-section {
     width: 100%;
-    padding: 32px 16px;
 }
 
 .header-text-section {
     width: 100%;
     font-size: 24px;
-    border-bottom: #f1f1f1 1px solid;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 16px 0;
     margin: 10px 0;
@@ -30,3 +32,4 @@
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
