--- a/html/learns/learn_project/W3school/architects/assets/css/main.css
+++ b/html/learns/learn_project/W3school/architects/assets/css/main.css
@@ -77,6 +77,10 @@
 #projects {
 
 }
+.projects__header-text{
+    border-bottom: #f1f1f1 1px solid;
+    margin-bottom: 40px;
+}
 
 .projects_content {
     display: grid;
@@ -114,3 +118,105 @@
     transform: scale(1.2);
 }
 
+.about__header-text {
+    border-bottom: #f1f1f1 1px solid;
+}
+
+.about__text {
+    margin-bottom: 50px;
+}
+
+.about__team {
+    display: grid;
+    justify-content: space-between;
+    filter: grayscale(75%);
+    grid-template-rows: auto;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 16px;
+}
+
+.about__team-item{
+    overflow: hidden;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: #ccc 0 0 2px;
+    margin-bottom: 16px;
+    border-radius: 5px;
+}
+
+.about__team-img-wrap{
+    width: 100%;
+    overflow: hidden;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.about__team-img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.about__team-img:hover {
+    transform: scale(1.2);
+}
+
+.about__team-info{
+    padding: 0 8px;
+}
+
+.about__team-heading{
+    margin-top: 0;
+    padding-top: 0;
+}
+
+.about__team-sub-heading{
+    opacity: 60%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.about__team-dsc{
+
+}
+
+.about__team-btn{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f1f1f1;
+    font-family: 26px;
+    border-radius: 5px;
+}
+
+.about__team-btn:hover {
+    background-color: #ccc;
+}
+
+.contact__header {
+    padding: 0;
+}
+
+.contact__header-text {
+    border-bottom: #f1f1f1 1px solid;
+}
+
+.contact_dsc {
+    margin: 15px 0;
+}
+
+.contact__form {
+
+}
+
+.contact__input {
+    width: 100%;
+    padding: 10px;
+    border: #ccc 1px solid;
+    border-radius: 5px;
+    margin-top: 16px;
+}
+
+.contact__input:first-child {
+    margin-top: 0;
+}
