--- a/html/learns/learn_project/W3school/architects/assets/css/base.css
+++ b/html/learns/learn_project/W3school/architects/assets/css/base.css
@@ -37,3 +37,17 @@ body {
 .btn {
     cursor: pointer;
 }
+
+@keyframes backgroundMove {
+    0% {
+    background-position: 0% 25%;    
+    }
+
+    50% {
+    background-position: 100% 50%;
+    }
+
+    100% {
+    background-position: 0% 75%;    
+    }
+}
